# PARALLEL_CALCULATIONS_Labs

./: .gitignore  README.md
lab01/: README  README.md  create_graph.py  runme.sh
lab01/Lab01/: CMakeLists.txt  main.c  vector_manipulations.c  vector_manipulations.h
lab01/Lab01/include/: app.h  double_vector.h
lab01/Lab01/src/: app.c  double_vector.c  main.c
lab01/build-Lab01-Desktop-Default/: CMakeCache.txt  Lab01  Lab01.cbp  cmake_install.cmake
lab02/: .gitignore  README.md  create_graph.py
lab02/Lab02/: CMakeLists.txt
lab02/Lab02/src/: pi.c
